--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $databaseUrl: '%env(resolve:DATABASE_URL)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -24,9 +26,14 @@ services:
         arguments:
             $pdo: '@pdo_connection'
 
+    App\Service\DatabaseService:
+        arguments:
+            $databaseUrl: '%env(resolve:DATABASE_URL)%'
+
     App\Service\UserService:
         arguments:
-            $pdo: '@pdo_connection'
+            $databaseService: '@App\Service\DatabaseService'
+            $passwordHasher: '@security.password_hasher'
 
     pdo_connection:
         class: PDO
@@ -37,6 +44,4 @@ services:
         calls:
             - [ setAttribute, [ 3, 2 ] ]
 
-    App\Service\DatabaseService:
-        arguments:
-            $databaseUrl: '%env(resolve:DATABASE_URL)%'
+
