--- a/.env
+++ b/.env
@@ -25,7 +25,13 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=netwitter
 POSTGRES_PORT=5432
 
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@pgslave:5432/${POSTGRES_DB}"
+POSTGRES_MASTER_HOST=pgslave
+POSTGRES_SLAVE1_HOST=pgmaster
+POSTGRES_SLAVE2_HOST=pgasyncslave
+
+DATABASE_MASTER_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_MASTER_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+DATABASE_SLAVE1_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SLAVE1_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+DATABASE_SLAVE2_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SLAVE2_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
