--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $databaseUrl: '%env(resolve:DATABASE_URL)%'
+            $masterUrl: '%env(resolve:DATABASE_MASTER_URL)%'
+            $slave1Url: '%env(resolve:DATABASE_SLAVE1_URL)%'
+            $slave2Url: '%env(resolve:DATABASE_SLAVE2_URL)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -25,10 +27,6 @@ services:
     App\Security\User\UserProvider:
         arguments:
             $pdo: '@pdo_connection'
-
-    App\Service\DatabaseService:
-        arguments:
-            $databaseUrl: '%env(resolve:DATABASE_URL)%'
 
     App\Service\UserService:
         arguments:
