--- a/.env
+++ b/.env
@@ -69,6 +69,8 @@ GRAFANA_PORT=3000
 
 REDIS_DSN=redis://redis:6379
 
+REDIS_HOST=redis
+
 RABBITMQ_URL=amqp://user:password@rabbit-mq:5672
 RABBITMQ_VHOST=/
 
