--- a/config/services.yaml
+++ b/config/services.yaml
@@ -43,6 +43,19 @@ services:
         calls:
             - [ 'registerProducer', [ !php/const App\Service\AsyncService::ADD_POST, '@old_sound_rabbit_mq.add_posts_producer' ] ]
 
+    redis:
+        class: Redis
+        calls:
+            - [ connect, [ '%env(REDIS_HOST)%' ] ]
+
+    App\Service\FeedService:
+        arguments:
+            $redis: '@redis'
+
+    App\Consumer\AddPosts\Consumer:
+        arguments:
+            $databaseService: '@App\Service\DatabaseService'
+            $redis: '@redis'
 
     pdo_connection:
         class: PDO
