--- a/.env
+++ b/.env
@@ -19,13 +19,13 @@ APP_ENV=dev
 APP_SECRET=95367630cdd83b80bdd6d9e7946e5955
 ###< symfony/framework-bundle ###
 
-POSTGRES_HOST=citus_master
+POSTGRES_HOST=postgresql
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=user
 POSTGRES_PORT=5432
 
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@citus_master:5432/${POSTGRES_DB}"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgresql:5432/${POSTGRES_DB}"
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
