--- a/nginx/conf.d/mysite.local.conf
+++ b/nginx/conf.d/mysite.local.conf
@@ -1,3 +1,8 @@
+upstream php_upstream {
+    server app1:9000;
+    server app2:9000;
+}
+
 server {
     listen 80;
     server_name application.local;
@@ -17,7 +22,7 @@ server {
     location ~* \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass php_upstream;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
