--- a/telegraf.conf
+++ b/telegraf.conf
@@ -53,7 +53,7 @@
 
 [[outputs.influxdb_v2]]
 
-  urls = ["http://${DOCKER_INFLUXDB_INIT_HOST}:8086"]
+  urls = ["http://influxdb:8086"]
 
   ## Token for authentication.
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
